[package]
name = "quill-sys"
version = "0.1.0-alpha5.0"
authors = ["The Feather Project Developers"]
repository = "https://github.com/feather-rs/quill"
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = []
host = ["wasmer", "anyhow"]

[dependencies]
wasmer = { version = "1.0.0-alpha3", optional = true }
anyhow = { version = "1", optional = true }